Task-41617 : Fix button display on fireFox

--- a/platform-ui-skin/src/main/webapp/skin/less/social/portlets/IDMUsersManagement/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/portlets/IDMUsersManagement/Style.less
@@ -208,8 +208,8 @@
     left: 19px;
     color: @darkGrey;
     text-align: right;
-    font-size: 9px;
-    width: calc(100% - 24px);
+    font-size: 8px;
+    width: calc(100% - 30px);
     line-height: 30px;
     cursor: pointer;
   }
